--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,21 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.runner.NaukriRunner" class="method navigator-link" hash-for-method="addEducationPage">addEducationPage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -115,6 +101,11 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.runner.NaukriRunner" class="method navigator-link" hash-for-method="addResumeHeadLinePage">addResumeHeadLinePage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="com.runner.NaukriRunner" class="method navigator-link" hash-for-method="profilePage">profilePage</a> <!-- method navigator-link -->
@@ -137,35 +128,19 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.runner.NaukriRunner</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="addEducationPage">
-                  </a> <!-- addEducationPage -->
-                  <span class="method-name">addEducationPage</span>
-                  <div class="stack-trace">java.lang.AssertionError: ERROR : OCCURED DURING EXPLICIIT WAIT
-	at org.junit.Assert.fail(Assert.java:89)
-	at com.base.BaseClass.explicitcitWait(BaseClass.java:148)
-	at com.pageobjectmodel.AddEmployment.addEmploymentPage(AddEmployment.java:97)
-	at com.runner.NaukriRunner.addEducationPage(NaukriRunner.java:47)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">com.runner.NaukriRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="addResumeHeadLinePage">
+                  </a> <!-- addResumeHeadLinePage -->
+                  <span class="method-name">addResumeHeadLinePage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="profilePage">
@@ -236,22 +211,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addEducationPage')
+data.setCell(0, 1, 'validLoginPage')
 data.setCell(0, 2, 'com.runner.NaukriRunner')
-data.setCell(0, 3, 53180);
+data.setCell(0, 3, 2248);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validLoginPage')
+data.setCell(1, 1, 'profilePage')
 data.setCell(1, 2, 'com.runner.NaukriRunner')
-data.setCell(1, 3, 2574);
+data.setCell(1, 3, 1024);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'profilePage')
+data.setCell(2, 1, 'addResumeHeadLinePage')
 data.setCell(2, 2, 'com.runner.NaukriRunner')
-data.setCell(2, 3, 1313);
+data.setCell(2, 3, 995);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 57 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -266,12 +241,14 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.runner.NaukriRunner</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">addEducationPage</span>
+                <br/>
                 <span class="ignored-method-name">addSkillPage</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
@@ -291,17 +268,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">validLoginPage</span>
-                <span class="method-start">5641 ms</span>
+                <span class="method-start">5105 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">profilePage</span>
-                <span class="method-start">8230 ms</span>
+                <span class="method-start">7353 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">addEducationPage</span>
-                <span class="method-start">9548 ms</span>
+                <span class="method-name">addResumeHeadLinePage</span>
+                <span class="method-start">8380 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
